// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaView can override padding styles 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "paddingTop": 0,
        },
        {
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
        },
      ]
    }
  >
    <View />
  </View>
</View>
`;

exports[`SafeAreaView can set edges 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "paddingBottom": 4,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 1,
        },
      ]
    }
  >
    <View />
  </View>
</View>
`;

exports[`SafeAreaView can set edges value type 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 24,
          "paddingTop": 24,
        },
        {
          "paddingBottom": 24,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 25,
        },
      ]
    }
  >
    <View />
  </View>
</View>
`;

exports[`SafeAreaView renders 1`] = `
<View
  onSafeAreaInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {},
        {
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
        },
      ]
    }
  >
    <View />
  </View>
</View>
`;
